Redone the filter menu on mobile to fix issues

--- a/deploy/htdocs/version/src/inc/style/asset/_form.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_form.scss
@@ -175,6 +175,14 @@
 			}
 		}
 	}
+
+	@include respond-to(SMALL) {
+		.element {
+			height: 4rem;
+			font-size: mobile-size(2rem);
+			line-height: 4rem;
+		}
+	}
 }
 
 form {
